# ai-exam-preparation-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
ai-agent-share/: main.py
ai-agent-share/tests/: test_auth.py  test_embeddings.py  test_graph.py  test_rag.py  test_retriever.py  test_security.py
app/agents/: base_agent.py  daily_coach_agent.py  master_agent.py  memory_agent.py  notes_agent.py  orchestrator_agent.py  planner_agent.py  quiz_agent.py  quiz_review_agent.py  rag_agent.py  recommendation_agent.py  router_agent.py  tutor_agent.py
app/core/: api_response.py  config.py  exception_handler.py  llm.py  logging_middleware.py  security.py
app/database/: crud.py  database.py  learning_session_model.py  models.py  quiz_session_model.py  student_profile_model.py
app/exam_data/: btech_cse.json  class10_cbse.json  upsc.json
app/exceptions/: ai_exceptions.py
app/graph/: state.py  workflow.py
app/memory/: conversation_memory.py
docs/: 00_START_HERE.md  01_PROJECT_OVERVIEW.md  02_SYSTEM_ARCHITECTURE.md  03_BACKEND_DOCUMENTATION.md  04_FRONTEND_DOCUMENTATION.md  05_API_REFERENCE.md  06_DATABASE_SCHEMA.md  07_AI_WORKFLOW.md  08_DEVELOPMENT_ROADMAP.md  09_CHATGPT_CONTEXT.md  10_DEPLOYMENT_GUIDE.md  11_GIT_WORKFLOW.md  12_CHANGELOG.md  13_CONTRIBUTING.md  14_TROUBLESHOOTING.md  15_FUTURE_FEATURES.md  16_INTERVIEW_GUIDE.md
frontend/: package-lock.json  package.json
tests/: test_db.py  test_extractor.py  test_graph.py  test_groq.py  test_loader.py  test_router.py  test_splitter.py  test_vector_store.py
vector_db/: chroma.sqlite3
(+153 files in other folders)
