[project]
name = "ai-exam-preparation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt==4.1.3",
    "chromadb>=1.5.9",
    "email-validator>=2.3.0",
    "fastapi>=0.138.1",
    "groq>=1.5.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langgraph>=1.2.7",
    "openai>=2.44.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
